@@ -73,6 +73,7 @@ finalcutinclude_HEADERS = \
 	include/final/fbuttongroup.h \
 	include/final/fcharmap.h \
 	include/final/fcheckbox.h \
+	include/final/fcolorpair.h \
 	include/final/fconfig.h \
 	include/final/fswitch.h \
 	include/final/fdialog.h \
