@@ -15,6 +15,7 @@ noinst_PROGRAMS = \
 	ftermcapquirks_test \
 	foptimove_test \
 	foptiattr_test \
+	fcolorpair_test \
 	fstring_test \
 	fsize_test \
 	fpoint_test \
@@ -28,6 +29,7 @@ ftermdetection_test_SOURCES = ftermdetection-test.cpp
 ftermcapquirks_test_SOURCES = ftermcapquirks-test.cpp
 foptimove_test_SOURCES = foptimove-test.cpp
 foptiattr_test_SOURCES = foptiattr-test.cpp
+fcolorpair_test_SOURCES = fcolorpair-test.cpp
 fstring_test_SOURCES = fstring-test.cpp
 fsize_test_SOURCES = fsize-test.cpp
 fpoint_test_SOURCES = fpoint-test.cpp
@@ -41,6 +43,7 @@ TESTS = fobject_test \
 	ftermcapquirks_test \
 	foptimove_test \
 	foptiattr_test \
+	fcolorpair_test \
 	fstring_test \
 	fsize_test \
 	fpoint_test \
